# ArUcoMarkers

./: .gitignore  CMakeLists.txt  README.md  debug_build.bat  vcpkg.json
src/: main.cpp
